# betterCam

./: BETTERCAM  MANIFEST.in  Pipfile  README.md  TODO.md  betterCam  betterCam_config  betterCamera  prepare_all  setup.py
bcam/: betterCam_config  betterCamera.py
pyinstaller/linux/: TODO.md  build_all  clean_all
todo_misc/: copy_all  setup.cfg
todo_misc/src/betterCam/: __init__.py  betterCam.py  requirements.txt
