[metadata]
name = betterCam
version = 0.0.1    
author = Kacper Topolnicki
author_email = kacpertopol@gmail.com
description = Turn a web cam into a black/white board.
license = GPL Version 3
url = https://github.com/kacpertopol/betterCam
classifiers =
    Programming Language :: Python :: 3

[options.packages.find]
where = src

[options]
package_dir =
    = src
packages = betterCam
install_requires=
            numpy>=1.21.2
            opencv_python>=4.5.3.56
include_package_data = True


